<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginScreen">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/group_212385"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rCafeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="146dp"

            android:src="@drawable/group_212407"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="23dp"
                android:clickable="true"
                android:elevation="2dp"
                android:fontFamily="@font/circe_bold"
                android:text="@string/skip"
                android:textAlignment="textStart"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/circe_regular"
                android:text="@string/welcome"
                android:textColor="@color/darkgray"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skip" />

            <TextView
                android:id="@+id/pleaseLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/circe_regular"
                android:text="@string/pleaselogintocontinue"
                android:textColor="@color/brown_4c2a14"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />


            <include
                android:id="@+id/numberInput"
                layout="@layout/number_input_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@+id/pleaseLogin"

                />

            <LinearLayout
                android:id="@+id/iAgreeToFollowingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/privacyPolicyLayout"
                app:layout_constraintEnd_toEndOf="@id/continueButtonLogin"
                app:layout_constraintStart_toStartOf="@id/continueButtonLogin"
                app:layout_constraintTop_toBottomOf="@id/numberInput">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"



                    android:button="@drawable/custom_checkbox"
                    android:drawableTint="@color/black"

                    />

                <TextView

                    android:id="@+id/iAgreeToFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/circe_regular"
                    android:text="@string/i_agree_to_the_following"
                    android:textColor="@color/darkgray_323232" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyPolicyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="45dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/continueButtonLogin"
                app:layout_constraintEnd_toEndOf="@id/continueButtonLogin"
                app:layout_constraintStart_toStartOf="@id/continueButtonLogin"
                app:layout_constraintTop_toBottomOf="@id/iAgreeToFollowingLayout">

                <TextView
                    android:id="@+id/privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circe_regular"
                    android:lineSpacingExtra="19dp"
                    android:text="@string/privacyLogin"
                    android:textColor="@color/darkgray_323232"
                    android:textSize="12dp"


                    app:layout_constraintBottom_toTopOf="@id/continueButtonLogin"
                    app:layout_constraintEnd_toEndOf="@+id/continueButtonLogin"
                    app:layout_constraintStart_toStartOf="@id/continueButtonLogin" />

                <TextView
                    android:id="@+id/termsAndConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circe_regular"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/darkgray_323232"
                    android:textSize="12dp"
                    android:layout_marginStart="3dp"
                    app:layout_constraintBottom_toBottomOf="@id/privacyPolicy"
                    app:layout_constraintEnd_toEndOf="@id/continueButtonLogin"
                    app:layout_constraintStart_toEndOf="@id/privacyPolicy"
                    app:layout_constraintTop_toTopOf="@id/privacyPolicy" />
            </LinearLayout>

            <Button
                android:id="@+id/continueButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button"
                android:fontFamily="@font/circe_regular"
                android:gravity="center"
                android:text="@string/cont"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>