<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pin_background"

        tools:context=".PinVerification">

        <Button
            android:id="@+id/backButtonNumVerification"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50.0dp"
            android:background="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumVerfication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="124.0dp"
            android:fontFamily="@font/circe_bold"
            android:text="@string/bean_blend_code"
            android:textColor="@color/brown"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumVerfication1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/circe_regular"
            android:text="@string/designAQuickNumVerfication"
            android:textColor="@color/brown"
            android:textSize="13dp"
            app:layout_constraintEnd_toStartOf="@id/mobileIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNumVerfication" />

        <ImageView
            android:id="@+id/mobileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83.0dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/group_306080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="13dp"

            android:background="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNumVerfication1">

            <TextView
                android:id="@+id/textViewNumVerfication2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="41dp"

                android:fontFamily="@font/circe_bold"
                android:gravity="center"
                android:text="@string/enter4DigitPinNumVerification"
                android:textColor="@color/lightGray_7b7b7b"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/PinNumVerfication"
                layout="@layout/pin_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNumVerfication2"


                />

            <TextView
                android:id="@+id/textViewNumVerfication3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="19dp"

                android:fontFamily="@font/circe_bold"
                android:gravity="center"
                android:text="@string/confirm4DigitPinNumVerification"
                android:textColor="@color/lightGray_7b7b7b"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PinNumVerfication" />

            <include
                android:id="@+id/PinNumVerfication2"
                layout="@layout/pin_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNumVerfication3"


                />

            <Button
                android:id="@+id/continueButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/button"
                android:fontFamily="@font/circe_regular"
                android:paddingHorizontal="134dp"
                android:text="@string/setPinNumVerificatio"
                android:textColor="@color/white"

                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/PinNumVerfication2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>